# narwhals-datafusion

./: pyproject.toml
src/narwhals_datafusion/: __init__.py  dataframe.py  expr.py  namespace.py  utils.py
