[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "narwhals_datafusion"
version = "0.1.0"
description = "narwhals integration for datafusion-python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
    "datafusion>=50.0.0",
    "narwhals>=2.8.0",
]

[project.entry-points.'narwhals.plugins']
narwhals-datafusion = 'narwhals_datafusion'

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
